Exp-1/output/f00242_PushToHubCallback_test.err
  File "output/f00242_PushToHubCallback_test.py", line 2
    import assert
           ^
SyntaxError: invalid syntax
